[tool.poetry]
name = "aws-ray-cluster"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.91"
botocore = "^1.35.91"
ray = {extras = ["default"], version = "^2.40.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
